gitops/cluster/config/base/argo/argo-workflows/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: argo
  labels: 
    openshift.io/cluster-monitoring: "true"
