gitops/cluster/config/base/argo/argo-workflows/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: argo
spec:
  host: argo.apps.okd.example.com
  tls:
    termination: edge
  to:
    kind: Service
    name: argo-server
    weight: 100
  wildcardPolicy: None
